fixed info (burger) menu on mobile

--- a/Festival.css
+++ b/Festival.css
@@ -1380,7 +1380,6 @@ a.lightgray {
        border-bottom-left-radius: 20px;
    }
    .pdf_container {
-      padding: 10px 20px;
       border-bottom-left-radius: 20px;
     } 
     .pdf,
